--- a/hrms-client/src/component/holiday/holiday.scss
+++ b/hrms-client/src/component/holiday/holiday.scss
@@ -33,5 +33,39 @@
 
       }
     }
+
+    label{
+      width:100px;
+    }
+
+    .ant-select{
+      height:40px;
+      text-align: left;
+
+    }
+
+    .ant-picker{
+      width:265px;
+
+    }
+
+    input{
+      width: 265px;
+    }
+
+    .ant-select{
+      width: 265px;
+    }
+    //.holiday-create-form_formdata{
+    //    //  display:flex;
+    //    //}
+
+    //.holiday-create-form_data{
+    //  display: flex;
+    //  flex-direction: column;
+    //  gap: 30px;
+    //
+    //
+    //}
   }
 }
