--- a/hrms-client/src/component/header/header.scss
+++ b/hrms-client/src/component/header/header.scss
@@ -1,7 +1,9 @@
 $button: linear-gradient(135deg, #5FA4E6 25%, #665DCD 40%);
+@import '../../styles/common/00-settings/index.scss';
+@import '../../styles/common/01-generic/index.scss';
+@import '../../styles/common/02-component/index.scss';
 
 header {
-
   .header-section {
     display: flex;
     flex-direction: row;
@@ -9,13 +11,14 @@ header {
     justify-content: space-between;
     max-width: 1440px;
     margin: 0 auto;
+    padding: 0 60px;
   }
 
   &.ant-layout-header {
     position: sticky;
     top: 0;
     z-index: 5;
-    padding: 0 60px;
+    padding: 0;
     background: #1077DA !important;
 
     .ant-row {
@@ -45,15 +48,13 @@ header {
     border-width: 2px;
     height: unset;
     padding: 4px 24px;
-    transition: transform ease-out 0.3s;
+    transition: all ease-out 0.3s;
 
     &:hover {
+      color: $hrms-white !important;
+      border: 2px solid $hrms-white !important;
+      background: transparent !important;
       transform: translate(0, -2px);
-    }
-
-    &:hover {
-      color: white !important;
-      border: 2px solid #d9d9d9 !important;
     }
   }
 }
