--- a/hrms-client/src/component/layoutComponent/layoutComponent.scss
+++ b/hrms-client/src/component/layoutComponent/layoutComponent.scss
@@ -19,7 +19,7 @@
     display: grid;
     place-items: center;
     cursor: pointer;
-    box-shadow: 0 4px 12px 0 $hrms-gray-50;
+    //box-shadow: 0 2px 15px 0 $hrms-gray-40;
     transition: all 0.3s ease-out;
     z-index: 5;
 
