--- a/hrms-client/src/styles/common/00-settings/colors.scss
+++ b/hrms-client/src/styles/common/00-settings/colors.scss
@@ -40,6 +40,7 @@ $hrms-gray-20: #E9E9E9;
 $hrms-gray-30: #D1D1D1;
 $hrms-gray-40: #BFBFBF;
 $hrms-gray-50: #6B727A;
+$hrms-gray-60: #777777;
 
 
 // BLACK SHADES
