--- a/hrms-client/src/styles/common/01-generic/scrollbar.scss
+++ b/hrms-client/src/styles/common/01-generic/scrollbar.scss
@@ -22,12 +22,12 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
-  background-color: rgba(0, 0, 0, 0.1);
+  //-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+  //background-color: rgba(0, 0, 0, 0.1);
 }
 
 body::-webkit-scrollbar-thumb {
-  border-radius: 10px;
+  //border-radius: 10px;
   //background-color: #1077DA;
   background-image: linear-gradient($hrms-blue-60 25%, $hrms-blue-60 40%);
 }
