--- a/hrms-client/src/styles/common/00-settings/colors.scss
+++ b/hrms-client/src/styles/common/00-settings/colors.scss
@@ -30,8 +30,8 @@ $hrms-box-shadow-03: 0 5px 20px rgba(#FA81E8, 0.5);
 // WHITE SHADES
 $hrms-white: #FFFFFF;
 $hrms-white-10: #FBFBFD;
-$hrms-white-20: #F5F5F5;
-$hrms-white-30: #F6F7F9;
+$hrms-white-20: #F6F7F9;
+$hrms-white-30: #F2F4F8;
 
 
 // GRAY SHADES
@@ -107,6 +107,7 @@ $hrms-cards-bg-20: #EEECFF;
 $hrms-cards-bg-30: #FDF3EA;
 $hrms-cards-bg-40: #E0F8F2;
 $hrms-cards-bg-50: #D9F2F7;
+$hrms-cards-bg-60: #E8F0FE80;
 
 
 $hrms-color-10: #DEF2EB;
