--- a/hrms-client/src/styles/common/01-generic/button.scss
+++ b/hrms-client/src/styles/common/01-generic/button.scss
@@ -55,7 +55,8 @@
     --hovered-color: #0077ff;
     position: relative;
     display: flex;
-    font-size: 16px;
+    font-size: 14px;
+    line-height: 18px;
     font-weight: 400;
     gap: 0.5rem;
     align-items: center;
@@ -65,26 +66,32 @@
       margin: 0;
       position: relative;
       color: var(--primary-color);
+
+      &::after {
+        position: absolute;
+        content: "";
+        width: 0;
+        left: 0;
+        bottom: -2px;
+        background: var(--hovered-color);
+        height: 1.5px;
+        transition: 0.3s ease-out;
+      }
+
+      &:hover {
+        &:after {
+          width: 100%;
+        }
+      }
     }
 
     svg {
       color: var(--primary-color);
       transition: 0.2s;
       position: relative;
-      width: 15px;
+      width: 14px;
       transition-delay: 0.2s;
       opacity: 0;
-    }
-
-    &::after {
-      position: absolute;
-      content: "";
-      width: 0;
-      left: 0;
-      bottom: -2px;
-      background: var(--hovered-color);
-      height: 2px;
-      transition: 0.3s ease-out;
     }
 
     &:hover {
@@ -92,10 +99,6 @@
         transform: translateX(4px);
         color: var(--hovered-color);
         opacity: 1;
-      }
-
-      &:after {
-        width: 100%;
       }
     }
   }
