Common Dashboard for ADMIN and Employee fixes

--- a/hrms-client/src/App.scss
+++ b/hrms-client/src/App.scss
@@ -14,7 +14,8 @@
   }
 
   .ant-layout {
-    background: unset;
+    //background: unset;
+    background: $hrms-white-30;
 
     &.with-background {
       //background: $hrms-white-10;
