--- a/hrms-client/src/styles/common/00-settings/colors.scss
+++ b/hrms-client/src/styles/common/00-settings/colors.scss
@@ -31,7 +31,8 @@ $hrms-box-shadow-03: 0 5px 20px rgba(#FA81E8, 0.5);
 $hrms-white: #FFFFFF;
 $hrms-white-10: #FBFBFD;
 $hrms-white-20: #F6F7F9;
-$hrms-white-30: #F2F4F8;
+$hrms-white-30: #F8F9FA;
+$hrms-white-40: #F2F4F8;
 
 
 // GRAY SHADES
@@ -56,7 +57,7 @@ $hrms-blue-30: #CCDEFF;
 $hrms-blue-40: #ADC6FF;
 $hrms-blue-50: #5FA4E6;
 $hrms-blue-60: #1F6CF9;
-$hrms-blue-70: #1F6CF9;
+$hrms-blue-70: #0565FF;
 $hrms-blue-80: #1077DA;
 $hrms-blue-90: #1D39C4;
 $hrms-blue-button-primary: #0077ff;
