--- a/hrms-client/src/component/dashboard/dashboard.scss
+++ b/hrms-client/src/component/dashboard/dashboard.scss
@@ -3,14 +3,19 @@
 @import '../../styles/common/02-component/index.scss';
 
 
-//max-width: 1440px;
-//margin: 0 auto;
-//padding: 0 60px;
-
 .hrms-dashboard {
   //max-width: 95vw;
-  //margin: 0 auto;
+  margin: 40px 0;
   padding: 0 60px;
+
+  &__chart {
+    width: 200px;
+    text-align: center;
+  }
+
+  &__chart-and-links {
+    @include flex-row-space-between;
+  }
 
   &__quick-links {
     display: flex;
@@ -22,6 +27,7 @@
     @include poppins-s;
     text-align: left;
     min-width: 430px;
+    border: 1px solid #dee2e6;
 
     .anticon {
       svg {
@@ -50,29 +56,35 @@
         //cursor: pointer;
       }
     }
-  }
 
-  &__card-animated {
-    @include poppins-s;
-    min-width: 140px;
-    cursor: pointer;
-    text-align: center;
-    transition: all .25s ease;
+    &.animated {
+      min-width: 140px;
+      cursor: pointer;
+      text-align: center;
+      transition: all .25s ease;
 
-    &:hover {
-      transform: translateY(-2px) scale(1.02);
-      box-shadow: 0 5px 12px rgba(126,142,177,.2);
-    }
+      &:hover {
+        transform: translateY(-2px) scale(1.02);
+        //box-shadow: 0 5px 12px rgba(126,142,177,.2);
+        box-shadow: 0 2px 10px 0 $hrms-blue-30;
+        border-color: $hrms-blue-70;
+        color: $hrms-blue-70;
 
-    .ant-divider {
-      margin: 10px 0;
-    }
+        svg {
+          fill: #1077DA;
+        }
+      }
 
-    .anticon {
-      justify-content: center;
+      .ant-divider {
+        margin: 10px 0;
+      }
 
-      svg {
-        font-size: $hrms-font-size-ml;
+      .anticon {
+        justify-content: center;
+
+        svg {
+          font-size: $hrms-font-size-ml;
+        }
       }
     }
   }
