--- a/hrms-client/src/styles/common/00-settings/colors.scss
+++ b/hrms-client/src/styles/common/00-settings/colors.scss
@@ -37,7 +37,7 @@ $hrms-white-40: #F2F4F8;
 
 // GRAY SHADES
 $hrms-gray-10: #F0F0F0;
-$hrms-gray-20: #E9E9E9;
+$hrms-gray-20: #DEE2E6;
 $hrms-gray-30: #D1D1D1;
 $hrms-gray-40: #BFBFBF;
 $hrms-gray-50: #6B727A;
