--- a/hrms-client/src/component/dashboard/dashboard.scss
+++ b/hrms-client/src/component/dashboard/dashboard.scss
@@ -5,7 +5,7 @@
 
 .hrms-dashboard {
   //max-width: 95vw;
-  margin: 40px 0;
+  margin: 40px 0 80px;
   padding: 0 60px;
 
   &__page-header {
@@ -14,6 +14,11 @@
     padding-bottom: 10px;
     margin-bottom: 30px !important;
     border-bottom: 1px solid $hrms-gray-20;
+
+    &.ant-typography {
+      font-size: $hrms-font-size-m;
+      line-height: $hrms-line-height-m;
+    }
 
     &:after {
       content: "";
@@ -34,11 +39,16 @@
   }
 
   &__chart-and-links {
-    @include flex-row-space-between;
+    @include flex-col-align-start;
   }
 
   &__quick-links {
-    @include flex-col;
+    @include flex-row-space-between;
+    width: 100%;
+
+    &__section {
+      width: fit-content;
+    }
   }
 
   &__card {
@@ -80,7 +90,8 @@
     }
 
     &.animated {
-      min-width: 140px;
+      min-width: 120px;
+      max-width: 120px;
       cursor: pointer;
       text-align: center;
       transition: all .25s ease;
@@ -97,8 +108,12 @@
         }
       }
 
+      .ant-card-body {
+        padding: 16px;
+      }
+
       .ant-divider {
-        margin: 10px 0;
+        margin: 12px 0;
       }
 
       .anticon {
