--- a/hrms-client/src/component/enums/enum-card.scss
+++ b/hrms-client/src/component/enums/enum-card.scss
@@ -66,7 +66,7 @@
     width:5%;
     margin-left: auto;
     border-color:#1677FF;
-    background:#E6F4FF;
+    background:#E6F4FF !important;
     &:active{
       background:#E6F4FF;
     }
