create leave type

--- a/hrms-client/src/component/employee/employeeSearch.scss
+++ b/hrms-client/src/component/employee/employeeSearch.scss
@@ -18,6 +18,13 @@
         .ant-form-item-control-input {
             display: unset;
         }
+        .select-designation{
+            text-align: left;
+        }
+    }
+
+    .search-table.delete-button{
+        color: red;
     }
 
     .search-result-list {
