--- a/hrms-client/src/App.scss
+++ b/hrms-client/src/App.scss
@@ -21,6 +21,7 @@
       //background: $hrms-white-10;
       background: #e8f0fe80;
       height: 100%;
+      padding: 40px;
     }
 
     .ant-select-multiple {
@@ -44,7 +45,7 @@
 .data-table {
   max-width: 95vw;
   width: 100%;
-  margin: 40px auto;
+  margin: 0 auto;
   padding: 24px 40px;
   background-color: white;
   border-radius: 16px;
