--- a/hrms-client/src/component/holiday/holiday-list.scss
+++ b/hrms-client/src/component/holiday/holiday-list.scss
@@ -1,8 +1,5 @@
 .holiday-list {
-
-    .data-table{
-        margin: 0 40px 40px;
-    }
+    margin-top: 40px;
 
     .ant-picker-calendar {
         max-width: 1200px;
