--- a/hrms-client/src/component/user/user-create/userCreate.scss
+++ b/hrms-client/src/component/user/user-create/userCreate.scss
@@ -6,8 +6,8 @@
   align-items: center;
 
   .data-table {
-    margin: 32px;
-    padding: 40px;
+    //margin: 32px;
+    //padding: 40px;
   }
 
   .user-create-inputs {
