--- a/hrms-client/src/component/enums/enum-detail/leaves.scss
+++ b/hrms-client/src/component/enums/enum-detail/leaves.scss
@@ -3,6 +3,59 @@
     margin: unset !important;
   }
   .devider{
-    width: 1300px;
+    h2{
+      text-align: left;
+      font-weight: 400;
+    }
+    p{
+      font-weight: 400;
+    }
+
+  }
+  .leave-list{
+    max-width: 1440px;
+    display: flex;
+    gap:30px;
+    width: 100%;
+
+    &_item{
+      ul{
+        list-style-type: none;
+        li{
+          padding: 12px;
+          width: 350px;
+          background-color: white;
+          box-shadow: 0 0 20px 0 #CCDEFF;
+          border: 1px solid #CCDEFF;
+          border-radius: 10px;
+          a{
+            display: flex;
+            justify-content: space-between;
+            height: 28px;
+            align-items: center;
+          }
+          &:hover{
+            background: #fafafa;
+          }
+
+
+
+        }
+      }
+    }
+
+    &_table{
+      width: 100%;
+      background-color: white;
+      border-radius: 10px;
+      //box-shadow: 0 0 20px 0 #CCDEFF;
+      //border: 1px solid #CCDEFF;
+      padding: 32px 40px;
+      display: flex;
+      flex-direction: column;
+      gap: 60px;
+
+
+    }
   }
 }
