--- a/hrms-client/src/component/dashboard/dashboard.scss
+++ b/hrms-client/src/component/dashboard/dashboard.scss
@@ -5,8 +5,8 @@
 
 .hrms-dashboard {
   //max-width: 95vw;
-  margin: 40px 0 80px;
-  padding: 0 60px;
+  //margin: 40px 0 80px;
+  padding: 40px;
 
   &__page-header {
     position: relative;
