--- a/hrms-client/src/component/navbar/navbar.scss
+++ b/hrms-client/src/component/navbar/navbar.scss
@@ -1,3 +1,7 @@
+@import '../../styles/common/00-settings/index.scss';
+@import '../../styles/common/01-generic/index.scss';
+@import '../../styles/common/02-component/index.scss';
+
 .navigation-menu {
   background: #1077DA !important;
   z-index: 100;
@@ -44,16 +48,24 @@
     }
 
     &.navigation-menu {
-      .ant-menu-submenu {
-        .ant-menu-submenu-title {
-          color: #ffffff;
+      .ant-menu-submenu-title {
+        color: #ffffff;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 4px;
+        height: unset;
+        padding: 10px 38px 10px 16px;
+        font-size: $hrms-font-size-m;
+        line-height: $hrms-line-height-sm;
+
+        &:active {
+          background-color: rgba(0, 0, 0, 0.06);
         }
 
-        //&-open, &-active, &-selected, {
-        //  .ant-menu-submenu-title {
-        //    color: #ffffff;
-        //  }
-        //}
+        .ant-menu-title-content {
+          margin: unset;
+        }
       }
     }
   }
