Shifted all DESIGN FILES to STYLES folder section

--- a/hrms-client/src/styles/component/employeeDetail.scss
+++ b/hrms-client/src/styles/component/employeeDetail.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/common/00-settings/index.scss';
+@import '../common/00-settings/index';
 
 .ant-layout-content {
     line-height: unset !important;
