--- a/hrms-client/src/styles/component/user/userCreate.scss
+++ b/hrms-client/src/styles/component/user/userCreate.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/common/00-settings/index";
+@import "../../common/00-settings/index";
 
 .user-create-section {
   display: flex;
