--- a/hrms-client/src/styles/component/user/userLoginCard.scss
+++ b/hrms-client/src/styles/component/user/userLoginCard.scss
@@ -1,6 +1,5 @@
-@import '../../../styles/common/00-settings/index.scss';
-@import '../../../styles/common/01-generic/index.scss';
-@import '../../../styles/common/02-component/index.scss';
+@import '../../common/00-settings/index';
+@import '../../common/01-generic/index';
 
 
 .user-login {
