--- a/hrms-client/src/styles/component/header.scss
+++ b/hrms-client/src/styles/component/header.scss
@@ -1,7 +1,7 @@
 $button: linear-gradient(135deg, #5FA4E6 25%, #665DCD 40%);
-@import '../../styles/common/00-settings/index.scss';
-@import '../../styles/common/01-generic/index.scss';
-@import '../../styles/common/02-component/index.scss';
+@import '../common/00-settings/index';
+@import '../common/01-generic/index';
+
 
 header {
   .header-section {
