--- a/hrms-client/src/styles/component/navbar.scss
+++ b/hrms-client/src/styles/component/navbar.scss
@@ -1,6 +1,6 @@
-@import '../../styles/common/00-settings/index.scss';
-@import '../../styles/common/01-generic/index.scss';
-@import '../../styles/common/02-component/index.scss';
+@import '../common/00-settings/index';
+@import '../common/01-generic/index';
+
 
 .navigation-menu {
   background: #1077DA !important;
