--- a/hrms-client/src/styles/component/user/userLoginCard.scss
+++ b/hrms-client/src/styles/component/user/userLoginCard.scss
@@ -10,9 +10,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 38px;
-    width: 38px;
+    height: 40px;
+    width: 40px;
     cursor: pointer;
+    justify-self: flex-end;
   }
 
   &__card {
