--- a/hrms-client/src/styles/component/leaves.scss
+++ b/hrms-client/src/styles/component/leaves.scss
@@ -30,11 +30,12 @@
         list-style-type: none;
 
         .hrms-settings__sidebar-item {
-          padding: 12px;
+         padding:12px;
           background-color: white;
           //box-shadow: 0 0 20px 0 #CCDEFF;
           border: 1px solid #CCDEFF;
           border-radius: 10px;
+          white-space: nowrap;
 
           a {
             display: flex;
