simplify table in all leave and seating section

--- a/hrms-client/src/styles/component/employeeCreate.scss
+++ b/hrms-client/src/styles/component/employeeCreate.scss
@@ -63,9 +63,9 @@ input{
 }
 
 label{
-  font-size: 16px !important;
-  font-weight: 600 !important;
-  color: #A6A490 !important;
+  //font-size: 16px !important;
+  //font-weight: 600 !important;
+  //color: #A6A490 !important;
   width: 200px;
   text-align: left;
 }
