--- a/hrms-client/src/App.scss
+++ b/hrms-client/src/App.scss
@@ -19,7 +19,7 @@
 
     &.with-background {
       //background: $hrms-white-10;
-      background: #e8f0fe80;
+      //background: #e8f0fe80;
       height: 100%;
       padding: 40px 40px 20px;
     }
