--- a/hrms-client/src/styles/component/layoutComponent.scss
+++ b/hrms-client/src/styles/component/layoutComponent.scss
@@ -7,8 +7,8 @@
   flex-direction: row;
 
   .main-section {
-    min-height: 90vh;
-    height: 100%;
+    //min-height: 90vh;
+    //height: 100%;
   }
 
   .scroll-to-top {
@@ -46,5 +46,6 @@
     width: 100%;
     height: 100%;
     padding-left: 140px;
+
   }
 }
