--- a/hrms-client/src/index.css
+++ b/hrms-client/src/index.css
@@ -39,16 +39,16 @@ code {
 
 .ant-input {
   border-radius: 4px !important;
-  border-left: 5px solid #1677ff !important;
+  /*border-left: 5px solid #1677ff !important;*/
 }
 
 .ant-select-selector {
   border-radius: 4px !important;
-  border-left: 5px solid #1677ff !important;
+  /*border-left: 5px solid #1677ff !important;*/
 }
 
 .ant-picker.css-dev-only-do-not-override-dkbvqv {
-  border-left: 5px solid #1677ff !important;
+  /*border-left: 5px solid #1677ff !important;*/
 }
 
 .ant-form-item .ant-form-item-explain-error {
