fix login button issue  and leave application input box

--- a/hrms-client/src/styles/component/header.scss
+++ b/hrms-client/src/styles/component/header.scss
@@ -12,6 +12,7 @@ header {
     //max-width: 1440px;
     //margin: 0 auto;
     padding: 10px 60px;
+    place-items: end;
   }
 
   &.ant-layout-header {
