--- a/hrms-client/src/styles/component/dashboard.scss
+++ b/hrms-client/src/styles/component/dashboard.scss
@@ -7,6 +7,10 @@
   //margin: 40px 0 80px;
   padding: 40px;
 
+  //.users-count-section-home{
+  //  box-shadow: unset;
+  //}
+
   &__page-header {
     position: relative;
     text-align: left;
