--- a/hrms-client/src/styles/component/user/userDetailsCard.scss
+++ b/hrms-client/src/styles/component/user/userDetailsCard.scss
@@ -6,6 +6,14 @@
       transition: all 250ms ease-in-out;
     }
 
+    .small-user-card {
+      //border: unset;
+      //cursor: pointer;
+      //transition: all 250ms ease-in-out;
+      width: unset !important;
+      //background-color: #4cd964;
+    }
+
     .admin {
       background: linear-gradient(45deg, rgba(#09AFE8,0.5) 0%, rgba(#29F499,0.8) 100%);
 
@@ -29,14 +37,6 @@
         box-shadow: 0 5px 20px rgba(#FA81E8, 0.5);
       }
     }
-
-    //.guest-users {
-    //  background: linear-gradient(45deg, rgba(#FF998B,0.5) 0%, rgba(#FF6D88,0.8) 100%);
-    //
-    //  &:hover {
-    //    box-shadow: 0 5px 20px rgba(#FF998B, 0.5);
-    //  }
-    //}
   }
 
   .ant-card {
@@ -64,4 +64,13 @@
   .events-section {
     margin-top: 60px;
   }
+}
+
+.small-user-card {
+  border: 1px solid rgba(0, 0, 0, 0.18);
+  //border: unset;
+  //cursor: pointer;
+  transition: all 250ms ease-in-out;
+  width: 150px;
+  //background-color: #4cd964;
 }
