added functions for api , and corrected , edited features such as leave search , entitlement, leave request , dashboard

--- a/hrms-client/src/styles/component/user/userDetailsCard.scss
+++ b/hrms-client/src/styles/component/user/userDetailsCard.scss
@@ -65,6 +65,25 @@
     margin-top: 60px;
   }
 }
+.user-dashboard-count {
+      font-family:'Poppins', sans-serif;
+     cursor: pointer;
+     min-width: 110px;
+     max-width: 110px;
+     text-align: center;
+     transition: all .25s ease;
+
+    &:hover {
+      transform: translateY(-2px) scale(1.02);
+      box-shadow: 0 2px 10px 0 #CCDEFF;
+      border-color: #0565FF;
+      color: #0565FF;
+      .ant-card-head-title{
+        color: #0565FF;
+      }
+    }
+
+}
 
 .small-user-card {
   border: 1px solid rgba(0, 0, 0, 0.18);
