--- a/hrms-client/src/styles/component/layoutComponent.scss
+++ b/hrms-client/src/styles/component/layoutComponent.scss
@@ -45,7 +45,7 @@
   &__content{
     width: 100%;
     height: 100%;
-    padding-left: 140px;
-
+    max-height: 100vh;
+    overflow-y: scroll;
   }
 }
