--- a/hrms-client/src/styles/component/navbar.scss
+++ b/hrms-client/src/styles/component/navbar.scss
@@ -6,10 +6,15 @@
   background: #1077DA !important;
   z-index: 100;
   font-size: $hrms-font-size-m;
-  position: fixed;
+  //position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
+  min-width: 200px; //todo need change
+
+  .ant-menu-submenu-title {
+    padding-left: unset;
+  }
 
   &__header {
     text-align: center;
@@ -22,6 +27,23 @@
   }
 }
 
+.ant-menu-title-content {
+  font-size: 12px;
+}
+
+.nav-home {
+  padding-left: 0px;
+  gap: 0px;
+}
+
+.custom-home-icon {
+  padding-left: 1px;
+}
+
+.sub-menu {
+  text-align: left;
+}
+
 .navigation-menu {
   //background: #1077DA !important;
   //z-index: 100;
@@ -29,15 +51,16 @@
   &.ant-menu {
 
     &.ant-menu-light {
-      max-width: fit-content;
+      //max-width: fit-content;
       background: unset;
       color: $hrms-white;
       display: flex;
       flex-direction: column;
-      gap: 16px;
+      gap: 14px;
+      border-right: none;
 
       &.ant-menu-horizontal {
-        >.ant-menu-submenu {
+        > .ant-menu-submenu {
           &:hover::after,
           &.ant-menu-submenu-open::after,
           &.ant-menu-submenu-active::after,
@@ -45,9 +68,10 @@
             border-bottom-width: 3px;
             border-bottom-color: white;
             border-radius: 2px;
+
           }
 
-          &-selected >.ant-menu-submenu-title {
+          &-selected > .ant-menu-submenu-title {
             color: #ffffff;
           }
         }
@@ -59,15 +83,16 @@
     }
 
     &.navigation-menu {
-      .ant-menu-submenu-title, >.ant-menu-item {
+      .ant-menu-submenu-title, > .ant-menu-item {
         color: $hrms-white;
         display: flex;
-        flex-direction: column;
+        //    flex-direction: column;
         align-items: center;
         height: unset;
         padding: 10px 38px 10px 16px;
-        font-size: $hrms-font-size-m;
+        font-size: $hrms-font-size-xs;
         line-height: $hrms-line-height-sm;
+        gap: 16px;
 
         &:active {
           background-color: rgba(0, 0, 0, 0.06);
@@ -75,25 +100,49 @@
 
         .ant-menu-title-content {
           margin: unset;
+          text-align: left;
         }
       }
 
-      >.ant-menu-item {
+      > .ant-menu-item {
         margin: unset;
         width: 100%;
+        text-align: left;
 
         &.ant-menu-item-selected {
-          background-color: rgba(0, 0, 0, 0.06);
-        }
+          background-color: #08569e;
+          color: #fff;        }
 
         &:hover {
           color: $hrms-white;
         }
       }
 
-      svg{
+      svg {
         font-size: $hrms-font-size-sm;
       }
     }
+
+    .ant-menu-item {
+      color: $hrms-white !important;
+    }
+
+    .ant-menu-submenu {
+      .ant-menu-item {
+        padding-left: 30px !important;
+        background-color: #1077DA;
+        border-radius: unset;
+
+
+        .ant-menu-title-content {
+          text-align: left;
+        }
+      }
+    }
   }
+}
+
+.navigation-menu .ant-menu-sub.ant-menu-inline .ant-menu-item-selected {
+  background-color: #08569e;
+  color: #fff;
 }
