Modified User Section and navbar changes

--- a/hrms-client/src/App.scss
+++ b/hrms-client/src/App.scss
@@ -21,7 +21,7 @@
       //background: $hrms-white-10;
       //background: #e8f0fe80;
       height: 100%;
-      padding: 15px 15px 15px;
+      padding: 15px 0px 0px;
     }
 
     .ant-select-multiple {
@@ -46,7 +46,7 @@
   max-width: 95vw;
   width: 100%;
   margin: 0 auto;
-  padding: 12px 15px;
+//  padding: 12px 15px;
  // background-color: white;
   //border-radius: 16px;
   //box-shadow: 0 0 10px $hrms-gray-10;
