--- a/hrms-client/src/styles/component/user/userCreate.scss
+++ b/hrms-client/src/styles/component/user/userCreate.scss
@@ -4,18 +4,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  height: 400px;
   .data-table {
     //margin: 32px;
     //padding: 40px;
+    width: unset;
   }
 
   .user-create-inputs {
     display: flex;
     flex-direction: column;
-    margin-top: 24px;
-    gap: 8px;
+    margin-top: 0px;
+    gap: 2px;
+    margin-left: 10px;
+
+    .ant-form-item-control-input{
+      border-radius: 0px;
+    }
   }
+
 
   .ant-form-item {
     .ant-form-item-label >label {
@@ -27,7 +34,7 @@
     }
 
     button[type="submit"] {
-      margin-top: 16px;
+      margin-top: -6px;
     }
   }
 
@@ -44,4 +51,19 @@
     height: 40px;
   }
 }
+.data-table {
+  //margin: 32px;
+  //padding: 40px;
+  width: 100%;
+}
+.ant-modal .ant-modal-content{
+  padding: 30px 20px;
+  border-radius: 0px;
 
+}
+.ant-modal-content .ant-modal-close{
+  top: 15px;
+}
+.ant-form-item-control-input{
+  width:300px
+}
