--- a/hrms-client/src/styles/component/user/userDataTable.scss
+++ b/hrms-client/src/styles/component/user/userDataTable.scss
@@ -6,12 +6,17 @@
 
 .user-data-table {
   .ant-table-content {
-    max-height: 380px;
+    max-height: fit-content;
     overflow-x: hidden;
-    overflow-y: scroll;
+   overflow-y: hidden;
     font-size: 12px;
-
+text-align: center;
   }
+  .ant-table-tbody{
+    .ant-table-cell{
+    padding: 8px 12px;}
+  }
+
 
   thead.ant-table-thead {
     position: sticky;
@@ -32,3 +37,90 @@
     }
   }
 }
+.anticon {
+  padding-right: 10px;
+  padding-left: 5px;
+
+}
+
+
+.ant-table-wrapper .ant-table-pagination.ant-pagination {
+  margin: 6px 0;
+}
+
+
+.ant-table-wrapper .ant-table-pagination {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 0px;
+}
+
+.user-detail-modal .ant-modal-content {
+
+  padding: 0;
+  overflow: hidden;
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  text-align: center;
+}
+.ant-modal .ant-modal-title {
+  text-align: center;
+  margin: 11px;
+  font-size: 18px;
+}
+
+
+
+.detail-content {
+  padding: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  font-size: 14px;
+  text-align: left;
+  width: 80%;
+  line-height: 1.8;
+}
+
+.detail-content p {
+  margin: 10px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.detail-content strong {
+  font-weight: 600;
+  color: #333;
+}
+.data-table {
+  //margin: 32px;
+  //padding: 40px;
+  width: 100%;
+}
+.ant-modal .ant-modal-content{
+  padding: 30px 20px;
+  border-radius: 0px;
+
+  .ant-modal-close{
+    top: 15px;
+  }
+
+}
+
+.ant-form-inline {
+   display: unset;
+
+  flex-wrap: wrap;
+}
+
+
+  .ant-modal-title{
+  }
+
+.user-create-inputs{
+  padding: 20px;
+}
+
